fix: fix vertical align, wrap tags doc for input

--- a/packages/theme/src/scss/components/input/basic.scss
+++ b/packages/theme/src/scss/components/input/basic.scss
@@ -6,6 +6,7 @@
 :host {
   display: inline-flex;
   max-inline-size: 100%;
+  vertical-align: bottom;
 }
 
 @include b(input) {
